// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` includes needs review test when feature flag on 1`] = `
<VisualizationBasedLeftNav
  deps={
    Object {
      "navLinkHandler": Object {
        "onFastPassTestClick": [Function],
      },
    }
  }
  featureFlagStoreData={
    Object {
      "needsReview": true,
    }
  }
  onLinkClick={[Function]}
  onRightPanelContentSwitch={[Function]}
  selectedKey="some string"
  setNavComponentRef={[Function]}
  visualizations={
    Array [
      1,
      3,
      29,
    ]
  }
/>
`;

exports[` renders visualization based left nav with appropriate params 1`] = `
<VisualizationBasedLeftNav
  deps={
    Object {
      "navLinkHandler": Object {
        "onFastPassTestClick": [Function],
      },
    }
  }
  featureFlagStoreData={Object {}}
  onLinkClick={[Function]}
  onRightPanelContentSwitch={[Function]}
  selectedKey="some string"
  setNavComponentRef={[Function]}
  visualizations={
    Array [
      1,
      3,
    ]
  }
/>
`;
